--- a/Startproject-421lff/app/src/main/res/layout/activity_main.xml
+++ b/Startproject-421lff/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,133 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.administrator.startproject_421lff.MainActivity">
 
+    <TextView
+        android:text="风       力："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView6"
+        android:textSize="24sp"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/tv_WS"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="74dp" />
+
+    <TextView
+        android:text="湿       度："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView8"
+        android:textSize="24sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/textView6"
+        android:layout_marginBottom="19dp" />
+
+    <TextView
+        android:text="风       向："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:textSize="24sp"
+        android:layout_above="@+id/textView6"
+        android:layout_alignStart="@+id/textView6"
+        android:layout_marginBottom="32dp" />
+
+    <TextView
+        android:text="温       度："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:textSize="24sp"
+        android:layout_alignTop="@+id/tv_temp"
+        android:layout_alignStart="@+id/textView4" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_city_no"
+        android:textSize="24sp"
+        android:textColor="@android:color/holo_blue_light"
+        android:layout_above="@+id/tv_temp"
+        android:layout_alignEnd="@+id/editText"
+        android:layout_marginBottom="15dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_WS"
+        android:textSize="24sp"
+        android:textColor="@android:color/holo_blue_light"
+        android:layout_alignBaseline="@+id/textView4"
+        android:layout_alignBottom="@+id/textView4"
+        android:layout_alignEnd="@+id/textView2" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_WD"
+        android:textSize="24sp"
+        android:textColor="@android:color/holo_blue_light"
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignStart="@+id/tv_WS" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_SD"
+        android:textSize="24sp"
+        android:textColor="@android:color/holo_blue_light"
+        android:layout_alignBaseline="@+id/textView8"
+        android:layout_alignBottom="@+id/textView8"
+        android:layout_alignStart="@+id/tv_WD" />
+
+    <TextView
+        android:text="城市代码："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView5"
+        android:textSize="24sp"
+        android:layout_alignBaseline="@+id/tv_city_no"
+        android:layout_alignBottom="@+id/tv_city_no"
+        android:layout_alignStart="@+id/textView" />
+
+    <TextView
+        android:text="城       市："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:textSize="24sp"
+        android:layout_above="@+id/textView5"
+        android:layout_alignStart="@+id/textView5"
+        android:layout_marginBottom="24dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        tools:textColor="@android:color/holo_blue_light"
+        android:textSize="24sp"
+        android:background="@android:color/transparent"
+        android:layout_alignBaseline="@+id/textView3"
+        android:layout_alignBottom="@+id/textView3"
+        android:layout_alignStart="@+id/tv_city_no" />
+
+    <Button
+        android:text="51"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"
+        android:textSize="24sp"
+        android:layout_alignBaseline="@+id/button"
+        android:layout_alignBottom="@+id/button"
+        android:layout_alignEnd="@+id/textView2" />
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,42 +144,29 @@
         android:text="101070201"
         android:ems="10"
         android:id="@+id/editText"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
+        android:textSize="24sp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:textSize="24sp" />
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="中国天气网"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:id="@+id/button"
+        android:textSize="24sp"
+        android:layout_below="@+id/editText"
+        android:layout_alignEnd="@+id/textView5"
+        android:textColorHighlight="@android:color/holo_blue_dark" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@android:dimen/notification_large_icon_height"
-        android:layout_marginTop="@android:dimen/app_icon_size"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/button"
-        android:layout_alignStart="@+id/editText"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        tools:textSize="24sp"
-        tools:textColor="@android:color/holo_blue_bright" />
-
-    <Button
-        android:text="查询1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:id="@+id/button"
-        android:layout_below="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:textSize="24sp" />
-
-    <Button
-        android:text="查询2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="17dp"
-        android:id="@+id/button2"
-        android:layout_alignBottom="@+id/button"
-        android:layout_alignParentEnd="true"
-        android:textSize="24sp" />
+        android:id="@+id/tv_temp"
+        android:textSize="24sp"
+        android:textColor="@android:color/holo_blue_light"
+        android:layout_marginBottom="31dp"
+        android:layout_above="@+id/tv_WS"
+        android:layout_alignStart="@+id/tv_city_no" />
 </RelativeLayout>
